--- a/brilho.css
+++ b/brilho.css
@@ -1,35 +1,196 @@
-
-
 /* Quando se quer formatar uma tag, precisa-se apenas chamar o nome da tag, porém quando se chama uma classe, se coloca um ponto ".", antes do nome da classe. */
 
 
-.menu{
-display: flex;
-margin-left: auto;
-margin-right: auto;
-width: 85%;
-background-color: rgb(141, 219, 250);
-overflow: hidden;
 
-}
- 
-.menu div{
-
-box-align: center;
-
+.vickbody {
+    background-image: linear-gradient(rgb(166, 255, 255), rgb(255, 254, 168), rgb(244, 181, 250));
 }
 
 
-.menu ul ul{
-text-align: center;
-list-style: none;
-position: relative;
+header {
+    background-image: url(fundoarco.jpeg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 99%;
 
 }
 
-.menu ul li{
- text-align: center;
-width: 150px;
-float: left;
+.menu {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    background-color: rgb(245, 117, 234);
+    overflow: hidden;
+    text-align: center;
+    padding: 10 px;
+}
 
+
+
+.div {
+    ;
+}
+
+
+
+.opiniao {
+    box-align: center;
+    left: 20px;
+}
+
+.opiniao1 {
+    box-align: right;
+    left: 20px;
+
+   
+}
+
+
+.menu ul {
+    text-align: center;
+    list-style: none;
+    position: relative;
+
+}
+
+.menu ul li {
+    text-align: center;
+    width: 250px;
+    float: left;
+
+}
+
+
+
+
+
+
+/* Configurando o corpo */
+.Rob_body {
+
+    /*background-image: linear-gradient(rgb(9, 137, 211), rgb(223, 238, 243), rgb(14,14,14)); */
+    /*background-image: linear-gradient(210deg, rgb(35, 46, 206), rgb(147, 158, 211) ); */
+    background-image: url(Paisagem_coqueiro_e_mar.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+    background-position: 30px 30px;
+    padding-bottom: 45;
+    padding-left: 95px;
+    padding-right: 95px;
+}
+
+/* Definição do Header */
+.Rob_header {
+    background-color: #a7bbc4;
+    text-align: center;
+    padding: 20px;
+}
+
+
+/* A caixa de navegação - Menu */
+.Rob_menu {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Links de navegação */
+.Rob_menu a {
+    float: none;
+    display: inherit;
+    color: #f2f2f2;
+    text-align: left;
+    padding: 10px 10px;
+    text-decoration: cornflowerblue;
+}
+
+/* Links - trocar a cor ao passar o mouse */
+.Rob_menu a:hover_maior {
+    background-color: rgb(175, 56, 56);
+    color: black;
+}
+
+.Rob_NAV {
+    display: block;
+    background-color: rgb(174, 195, 243);
+    size: 800px;
+    width: 800px;
+
+}
+
+.Rob_section_menor {
+    display: block;
+    background-color: rgb(194, 196, 247);
+    size: 600px;
+    width: 600px;
+}
+
+.Rob_aside {
+    width: 28%;
+    padding-right: 15px;
+    margin-right: 15px;
+    margin-top: 120px;
+    float: right;
+    font-style: italic;
+    background-color: rgb(77, 70, 99);
+    border: rgb(45, 6, 95);
+    border-style: double;
+
+
+}
+
+.Rob_aside_filial {
+    width: 22%;
+    padding-right: 15px;
+    margin-right: 5px;
+    margin-top: 20px;
+    float: right;
+    font-style: Normal;
+    background-color: rgb(77, 70, 99);
+    border: rgb(45, 6, 95);
+}
+
+.Rob_h1 {
+    /*text-shadow: 0.1em 0.1em 0.2em black;               */
+    /*Esfumaçãdo*/
+    /*text-shadow: 0.1em 0.1em 0.05em #333;               */
+    /* sombra */
+    /*color: white; text-shadow: black 0.1em 0.1em 0.2em; */
+    /* Branco com sombra*/
+    /*text-shadow: -2px -2px rgb(230, 35, 22), 2px 2px rgb(29, 10, 112);         */
+    /* Alto relevo*/
+    text-shadow: 2px 2px white, -2px -2px #444;
+    /* Baixo relevo*/
+}
+
+.rawmenu {
+    width: 100%;
+    height: 50px;
+}
+
+.rawmenu ul {
+    list-style: none;
+    position: relative;
+}
+
+.rawmenu ul li {
+    width: 150px;
+    float: left;
+}
+
+.rawmenu a {
+    padding: 15px;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+}
+
+.rawmenu ul ul {
+    position: absolute;
+    visibility: hidden;
+}
+
+.rawmenu ul li:hover ul {
+    visibility: visible;
 }
