--- a/brilho.css
+++ b/brilho.css
@@ -85,14 +85,11 @@
 }
 
 .vickopiniao1 {
-    text-align: center;
-    display: table-cell;
-    float: left;
-    width: 50%;
-    margin-left: 60%;
     
-    box-align: auto;
-    font-style: italic;
+    width: 50%;
+    margin-left: 60% ;
+    color: crimson;
+     
 }
 
 .vickdivtext2{
@@ -122,12 +119,44 @@ h2{
     text-align: center;
     color: rgb(39, 26, 212);
 }
-h3{
-    color: rgb(0, 0, 0);
+
+
+.h3vick1{
+    color: #fa4b4b;
+    border-color: rgb(0, 0, 0);
 }
 
- a {
-    color: rgb(255, 230, 0);
+
+.h3sobre1{
+    color: rgb(224, 139, 28);
+}
+
+
+ .h3sobre2{
+    color: rgb(224, 240, 0);
+}
+
+.h3sobre3{
+    color: rgb(20, 240, 0);
+}
+
+
+.h3visao1{
+    color: rgb(8, 236, 236);
+    
+}
+
+
+.h3visao2{
+    color: rgb(30, 44, 243); 
+}
+
+h4{
+   color: crimson;
+}
+
+a {
+    color: rgb(5, 72, 150);
 }
 
 .conh3 {
@@ -215,11 +244,11 @@ h3{
 .visaoopiniao2{
     text-align-last:auto ;
     width: 70%;
-    background-color: cadetblue;
+    
 }
 
 .visaotext1{
-    background-color: cornflowerblue;
+
 }
 
 .visaotext2{
@@ -228,7 +257,7 @@ h3{
     width: 60%;
     margin-top: -125px;
     width:60% ;
-    background-color: darkgray;
+    
 }
 
 .visaoopiniao3{
@@ -238,15 +267,17 @@ h3{
     float: left;
     width: 45%;
     margin-left: 60%;
-    background-color: darkolivegreen;
+   
+    
 }
+
 
 .visaotext3{
     margin-top: auto;
     text-align: left;
     display: table-cell;
     float: left;
-    background-color: darkorange;
+   
 }
 
 .visaotext4{
@@ -255,7 +286,7 @@ h3{
     display: table-cell;
     float: left;
     margin-top:  auto;
-    background-color: darkslateblue;
+    
 }
 
 
@@ -335,33 +366,43 @@ h3{
     float: left;
     width: 40%;
     margin-left: 68%;
-background-color: aqua;
+ 
 
 }
 
 
 .sobretext1{
+    margin-top: auto;
+    margin-bottom: -10% ;
     float: left;
-    width: 50%%;
-    background-color: rgb(0, 255, 136);
+    width: 70%;
+   
 }
 
 .sobreopiniao2{
-    width: 60%;
+    margin-left: 70%;
+    width: 35%;
     float: left;
     text-align: center;
-    background-color: rgb(137, 235, 117);
+  
 }
 
 .sobretext2{
-    background-color: rgb(236, 238, 104);
+    width: 70%;
+    
 }
 
 .sobreopiniao3{
-    background-color: rgb(250, 131, 101);
+    margin-top: -3%;
+    margin-left: 48%;
+    display: table-cell;
+    width: 60%;
+    float: left;
+    text-align: center;
+  
 }
 .sobretext3{
-    background-color: rgb(238, 146, 233);
+   
 }
 
 
