--- a/brilho.css
+++ b/brilho.css
@@ -102,9 +102,9 @@
 }
 
 .vickdivtext3{
-    display: table-cell;
-    width: 60%;
-    margin-top: 200px;
+    
+    width: 100%;
+    margin-top: 100px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     
 }
@@ -504,9 +504,9 @@ a {
 }
 
 .fimopiniao3{
-    margin-top: -2% ;
-    margin-left: 82%;
-    width: 25%;
+    margin-top: -1% ;
+    margin-right: 62%;
+    width: 85%;
    color: blueviolet;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
