--- a/brilho.css
+++ b/brilho.css
@@ -150,6 +150,11 @@ h2{
     color: rgb(30, 44, 243); 
 }
 
+.FIMFOOTER{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
 .fimm{
  text-align: center;
  background-color: rgb(243, 240, 42);
